Basics of Java code